{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 231,
  "lineage": "e009d9a8-7f17-dc23-f195-8ca65ca41d98",
  "resources": [
    {
      "module": "module.cipherem",
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb_ethereum",
      "provider": "module.cipherem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:740429191204:loadbalancer/net/nlb-geth-cipherem-zkrollup/6901ff8e5560c80e",
            "arn_suffix": "net/nlb-geth-cipherem-zkrollup/6901ff8e5560c80e",
            "dns_name": "nlb-geth-cipherem-zkrollup-6901ff8e5560c80e.elb.ap-southeast-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:740429191204:loadbalancer/net/nlb-geth-cipherem-zkrollup/6901ff8e5560c80e",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "nlb-geth-cipherem-zkrollup",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0118823ee8ba1c3e2"
              },
              {
                "subnet_id": "subnet-044b115ee3f389342"
              },
              {
                "subnet_id": "subnet-0b755989bc27196f1"
              }
            ],
            "subnets": [
              "subnet-0118823ee8ba1c3e2",
              "subnet-044b115ee3f389342",
              "subnet-0b755989bc27196f1"
            ],
            "vpc_id": "vpc-062bb1913e6cfe4e8",
            "zone_id": "ZKVM4W9LS7TM"
          }
        }
      ]
    },
    {
      "module": "module.cipherem",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener_go_ethereum",
      "provider": "module.cipherem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:740429191204:listener/net/nlb-geth-cipherem-zkrollup/6901ff8e5560c80e/b1ecbef545553e24",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:740429191204:targetgroup/geth-cipherem-zkrollup/e700dfb4a8e8edee",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:740429191204:listener/net/nlb-geth-cipherem-zkrollup/6901ff8e5560c80e/b1ecbef545553e24",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:740429191204:loadbalancer/net/nlb-geth-cipherem-zkrollup/6901ff8e5560c80e",
            "port": 22000,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cipherem.aws_lb.nlb_ethereum",
            "module.cipherem.aws_lb_target_group.nlb_tg_go_ethereum"
          ]
        }
      ]
    },
    {
      "module": "module.cipherem",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nlb_tg_go_ethereum",
      "provider": "module.cipherem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:740429191204:targetgroup/geth-cipherem-zkrollup/e700dfb4a8e8edee",
            "arn_suffix": "targetgroup/geth-cipherem-zkrollup/e700dfb4a8e8edee",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:740429191204:targetgroup/geth-cipherem-zkrollup/e700dfb4a8e8edee",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "geth-cipherem-zkrollup",
            "port": 22000,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-062bb1913e6cfe4e8"
          }
        }
      ]
    },
    {
      "module": "module.cipherem",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "go_ethereum",
      "provider": "module.cipherem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:740429191204:security-group/sg-04d7e64f69933d98a",
            "description": "Security group used in Ethereum network cipherem-zkrollup",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic for geth",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d7e64f69933d98a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic for geth p2p and rpc",
                "from_port": 21000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22000
              }
            ],
            "name": "go-ethereum-sg-cipherem-zkrollup",
            "name_prefix": "",
            "owner_id": "740429191204",
            "revoke_rules_on_delete": false,
            "tags": {
              "EthereumNetworkName": "cipherem-zkrollup",
              "Name": "ethereum-sg-cipherem-zkrollup"
            },
            "tags_all": {
              "EthereumNetworkName": "cipherem-zkrollup",
              "Name": "ethereum-sg-cipherem-zkrollup"
            },
            "timeouts": null,
            "vpc_id": "vpc-062bb1913e6cfe4e8"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}